--- a/notebooks/0_intro_machine_learning.ipynb
+++ b/notebooks/0_intro_machine_learning.ipynb
@@ -2,31 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "continuous-democracy",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://www.onemodel.co/hs-fs/hubfs/U4SezaC-1.png?width=536&name=U4SezaC-1.png\" width=\"300px\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aging-rolling",
+   "id": "driven-pottery",
    "metadata": {},
    "source": [
     "# Introduction to Machine Learning\n",
     "\n",
-    "## Goal\n",
-    "* basic high-level understanding of machine learning\n",
-    "* understand the importance of data\n",
-    "* \n",
+    "Most of the material in this document is taken from the [fast.ai](https://www.fast.ai/) course [Practical Deep Learning for Coders](https://course.fast.ai/), especially the [01_intro](https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb) and the [04_mnist_basics](https://colab.research.google.com/github/fastai/fastbook/blob/master/04_mnist_basics.ipynb) notebooks.\n",
     "\n",
-    "**Attribution.** Most of the material in this document is taken from the fast.ai course [Practical Deep Learning for Coders](https://course.fast.ai/), especially the [01_intro](https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb) and the [04_mnist_basics](https://colab.research.google.com/github/fastai/fastbook/blob/master/04_mnist_basics.ipynb) notebooks.\n",
     "In you are interested into machine learning, I highly recommend to check it out! They cover a lot of fundamentals of neural networks and machine learning in general in more depth."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-economy",
+   "id": "lonely-nelson",
    "metadata": {},
    "source": [
     "### Artificial Neurons\n",
@@ -46,7 +34,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/4/46/Colored_neural_network.svg\" width=\"300px\"/><a href=\"https://upload.wikimedia.org/wikipedia/commons/4/46/Colored_neural_network.svg\">(Image Source)</a>\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/4/46/Colored_neural_network.svg\" width=\"300px\"/>\n",
     "\n",
     "The term _deep learning_ just refers to neural networks with a lot of layers.\n",
     "\n",
@@ -55,12 +43,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wanted-fence",
+   "id": "polished-minimum",
    "metadata": {},
    "source": [
     "## What is _Machine Learning_?\n",
     "\n",
     "Deep learning and neural networks are just specific areas in the more general discipline of _machine learning_.\n",
+    "\n",
+    "<img src=\"https://www.researchgate.net/publication/338510612/figure/fig1/AS:845790511648768@1578663580011/A-Venn-diagram-of-artificial-intelligence-link-between-artificial-intelligence-machine.png\" width=\"400px\"/>\n",
     "\n",
     "_Machine Learning_ in general is, like regular programming, a way to get computers to complete a specific task. But how would we use regular programming to e.g. recognize dogs versus cats in photos? We would have to write down for the computer the exact steps necessary to complete the task.\n",
     "\n",
@@ -71,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "configured-hebrew",
+   "id": "thirty-horizontal",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -82,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cardiovascular-steel",
+   "id": "formal-bryan",
    "metadata": {},
    "source": [
     "For recognizing objects in a photo, this is a bit tricky: what _are_ the exact steps we take when we recognize an object in a picture? We really don't know, since it all happens in our brain without us being consciously aware of it!\n",
@@ -94,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stock-organic",
+   "id": "existing-examination",
    "metadata": {},
    "source": [
     "### Using Weight Assignment\n",
@@ -118,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "south-motorcycle",
+   "id": "entire-hungarian",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -130,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "invisible-tracy",
+   "id": "covered-dream",
    "metadata": {},
    "source": [
     "We've changed the name of our box from _program_ to _model_. This is to follow modern terminology and to reflect that the model is a special kind of program: it's one that can do many different things, depending on the weights. It can be implemented in many different ways.\n",
@@ -140,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-washington",
+   "id": "vocational-truck",
    "metadata": {},
    "source": [
     "### Training a Machine Learning Model\n",
@@ -156,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nonprofit-grass",
+   "id": "established-reflection",
    "metadata": {},
    "source": [
     "<img id=\"training_loop\" alt=\"Training a Machine Learning Model\" src=\"../assets/images/training_loop.svg\" width=\"600px\"/>\n",
@@ -166,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "independent-grocery",
+   "id": "opening-treat",
    "metadata": {},
    "source": [
     "Notice the distinction between the model's results (e.g., the moves in a checkers game) and its performance (e.g., whether it wins the game, or how quickly it wins).\n",
@@ -178,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revolutionary-salad",
+   "id": "technological-upper",
    "metadata": {},
    "source": [
     "<img id=\"using_model\" alt=\"Using a Trained Model as a Program\" src=\"../assets/images/using_model.svg\" width=\"500px\"/>\n",
@@ -188,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooperative-designer",
+   "id": "imposed-cable",
    "metadata": {},
    "source": [
     "This looks identical to our original diagram <a href=\"#traditional_program\">here</a>, just with the word _program_ replaced with _model_. This is an important insight: a trained model can be treated just like a regular computer program.\n",
@@ -198,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "determined-veteran",
+   "id": "competitive-feeling",
    "metadata": {},
    "source": [
     "## What is a Neural Network?\n",
@@ -213,28 +203,12 @@
     "\n",
     "This is called *stochastic gradient descent* (SGD). You can have a look on how neural networks and SGD work in detail in the [fast.ai MNIST Basics notebook](https://colab.research.google.com/github/fastai/fastbook/blob/master/04_mnist_basics.ipynb). \n",
     "\n",
-    "For now, however, we will instead use Samuel's own words: *We need not go into the details of such a procedure to see that it could be made entirely automatic and to see that a machine so programmed would \"learn\" from its experience.*"
+    "In other words, to recap, a neural network is a particular kind of machine learning model, which fits right in to Samuel's original conception. Neural networks are special because they are highly flexible, which means they can solve an unusually wide range of problems just by finding the right weights. This is powerful, because stochastic gradient descent provides us a way to find those weight values automatically."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "violent-basket",
-   "metadata": {},
-   "source": [
-    "In other words, to recap, a neural network is a particular kind of machine learning model, which fits right in to Samuel's original conception. Neural networks are special because they are highly flexible, which means they can solve an unusually wide range of problems just by finding the right weights. This is powerful, because stochastic gradient descent provides us a way to find those weight values automatically.\n",
-    "\n",
-    "Having zoomed out, let's now zoom back in and revisit our example image classification problem (cats vs. dogs) using Samuel's framework.\n",
-    "\n",
-    "Our inputs are the images. Our weights are the weights in the neural net. Our model is a neural net. Our results are the values that are calculated by the neural net, like \"dog\" or \"cat.\"\n",
-    "\n",
-    "What about the next piece, an *automatic means of testing the effectiveness of any current weight assignment in terms of actual performance*? Determining \"actual performance\" is easy enough: we can simply define our model's performance as its accuracy at predicting the correct answers.\n",
-    "\n",
-    "Putting this all together, and assuming that SGD is our mechanism for updating the weight assignments, we can see how our image classifier is a machine learning model, much like Samuel envisioned."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "emotional-respect",
+   "id": "genuine-assurance",
    "metadata": {},
    "source": [
     "## A Bit of Deep Learning Jargon\n",
@@ -253,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pressing-ballet",
+   "id": "authorized-honduras",
    "metadata": {},
    "source": [
     "<img id=\"detailed_loop\" alt=\"Detailed Training Loop\" src=\"../assets/images/detailed_loop.svg\" width=\"600px\"/>\n",
@@ -263,46 +237,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worthy-ivory",
+   "id": "protective-volunteer",
    "metadata": {},
    "source": [
-    "## Limitations Inherent to Machine Learning\n",
+    "## We Need Data!\n",
     "\n",
     "From this picture we can now see some fundamental things about training a deep learning model:\n",
     "\n",
     "- A model **cannot be created without data**.\n",
     "- A model can only learn to operate on the patterns seen in the input data used to train it.\n",
-    "- This learning approach only creates *predictions*, not recommended *actions*.\n",
     "- It's not enough to just have examples of input data; we need *labels* for that data too (e.g., pictures of dogs and cats aren't enough to train a model; we need a label for each one, saying which ones are dogs, and which are cats).\n",
     "\n",
     "Generally speaking, we've seen that most organizations that say they don't have enough data, actually mean they don't have enough *labeled* data. If any organization is interested in doing something in practice with a model, then presumably they have some inputs they plan to run their model against. And presumably they've been doing that some other way for a while (e.g., manually, or with some heuristic program), so they have data from those processes! \n",
     "\n",
-    "For instance, a radiology practice will almost certainly have an archive of medical scans (since they need to be able to check how their patients are progressing over time), but those scans may not have structured labels containing a list of diagnoses or interventions (since radiologists generally create free-text natural language reports, not structured data). We'll be discussing labeling approaches a lot in this book, because it's such an important issue in practice.\n",
-    "\n",
-    "Since these kinds of machine learning models can only make *predictions* (i.e., attempt to replicate labels), this can result in a significant gap between organizational goals and model capabilities. \n",
-    "\n",
-    "For instance, in [this book](https://github.com/fastai/fastbook) you'll learn how to create a *recommendation system* that can predict what products a user might purchase. This is often used in e-commerce, such as to customize products shown on a home page by showing the highest-ranked items. But such a model is generally created by looking at a user and their buying history (*inputs*) and what they went on to buy or look at (*labels*), which means that the model is likely to tell you about products the user already has or already knows about, rather than new products that they are most likely to be interested in hearing about. \n",
-    "\n",
-    "That's very different to what, say, an expert at your local bookseller might do, where they ask questions to figure out your taste, and then tell you about authors or series that you've never heard of before."
+    "For instance, a radiology practice will almost certainly have an archive of medical scans (since they need to be able to check how their patients are progressing over time), but those scans may not have structured labels containing a list of diagnoses or interventions (since radiologists generally create free-text natural language reports, not structured data). "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "jewish-hayes",
-   "metadata": {},
-   "source": [
-    "# TODO\n",
-    "\n",
-    "* overfitting/underfitting https://medium.com/greyatom/what-is-underfitting-and-overfitting-in-machine-learning-and-how-to-deal-with-it-6803a989c76"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "going-block",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
