--- a/notebooks/1_pytorch_basic.ipynb
+++ b/notebooks/1_pytorch_basic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://pytorch.org/\"><img src=\"https://raw.githubusercontent.com/pytorch/pytorch/master/docs/source/_static/img/pytorch-logo-dark.png\" width=\"600px\"/></a>"
+    "<img src=\"https://raw.githubusercontent.com/pytorch/pytorch/master/docs/source/_static/img/pytorch-logo-dark.png\" width=\"600px\"/>"
    ]
   },
   {
@@ -24,7 +24,7 @@
     "* open-source machine learning library\n",
     "* developed by Facebook AI Research + community\n",
     "* used in most state-of-the-art research\n",
-    "* \"Python first\": deeply integrated into Python, it should \"feel familiar\" to use"
+    "* _Python first_: deeply integrated into Python, it should _feel familiar_ to use"
    ]
   },
   {
@@ -42,27 +42,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Useful Links\n",
+    "Useful Links\n",
     "* [🔗 Official PyTorch Documentation](https://pytorch.org/docs/stable/index.html)\n",
     "\n",
     "Tutorials:\n",
     "* [🔗 60 Minute Blitz](https://pytorch.org/tutorials/beginner/deep_learning_60min_blitz.html)\n",
     "* [🔗 PyTorch Tutorials with Examples](https://pytorch.org/tutorials/beginner/pytorch_with_examples.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Attribution\n",
-    "\n",
-    "Most of the material in the theoretical part of this document is taken from the fast.ai [Practical Deep Learning for Coders](https://course.fast.ai/) notebooks.\n",
-    "\n",
-    "In you are interested, check out the colab notebooks from the fast.ai course, especially\n",
-    "* [01_intro](https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb) and \n",
-    "* [04_mnist_basics](https://colab.research.google.com/github/fastai/fastbook/blob/master/04_mnist_basics.ipynb). \n",
-    "\n",
-    "They cover a lot of fundamentals of neural networks and machine learning in general in more depth."
    ]
   },
   {
@@ -195,16 +180,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the real world, any data that you obtain will include some kind of noise (e.g. slight deviations in temperature readings due to a given precision of the sensor itself). Luckily, neural networks can handle noisy data quite well. Actually, introducing noise during training (especially for small datasets) can improve the robustness of the network and result in a better generalization (see e.g. [here](https://machinelearningmastery.com/train-neural-networks-with-noise-to-reduce-overfitting/)).\n",
+    "Let's have a look what our line looks like."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
     "\n",
-    "So, let's go ahead and add some noise to our _true_ $y$ data."
+    "ax.plot(x, y_true, color='#455a64', label='y_true')\n",
+    "ax.grid(True, alpha=0.4)\n",
+    "ax.legend()\n",
+    "fig.tight_layout();"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can draw some samples from a normal distribution and add it to our true $y$."
+    "In the real world, you usually don't know _true_ process that you are trying to model. You only have some data obtained from observing the process.\n",
+    "\n",
+    "Any measured data will include some kind of noise (e.g. slight deviations in temperature readings due to a given precision of the sensor itself). Luckily, neural networks can handle noisy data quite well. Actually, introducing noise during training (especially for small datasets) can improve the robustness of the network and result in a better generalization (see e.g. [here](https://machinelearningmastery.com/train-neural-networks-with-noise-to-reduce-overfitting/)).\n",
+    "\n",
+    "So, let's go ahead and add some noise to our _true_ $y$ data."
    ]
   },
   {
@@ -218,25 +219,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's have a look what our line looks like."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "\n",
     "ax.scatter(x, y_noisy, s=1, color='#90a4ae', alpha=0.75, label='y_noisy')\n",
-    "ax.plot(x, y_true, color='#455a64', label='y_true')\n",
-    "ax.grid(True, alpha=0.4)\n",
-    "ax.legend()\n",
-    "fig.tight_layout();"
+    "ax.legend();"
    ]
   },
   {
@@ -340,9 +329,7 @@
    "outputs": [],
    "source": [
     "xx = torch.from_numpy(x).unsqueeze(-1)\n",
-    "yy = torch.from_numpy(y_noisy)\n",
-    "\n",
-    "xx.shape, yy.shape"
+    "yy = torch.from_numpy(y_noisy)"
    ]
   },
   {
@@ -358,7 +345,7 @@
    "source": [
     "As mentioned before, our model parameters are initialized to random values. \n",
     "\n",
-    "Let's see how well our untrained neural network is predicting our line."
+    "Let's have a look at what our model predicts with these intital parameters."
    ]
   },
   {
@@ -377,7 +364,7 @@
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(nrows=2, figsize=(6, 6), gridspec_kw={'height_ratios':[0.7, 0.3]})\n",
-    "axes[0].scatter(x, y_noisy, s=0.5, color='#90a4ae', alpha=0.25, label='y_noisy')\n",
+    "axes[0].scatter(x, y_noisy, s=0.5, color='#90a4ae', alpha=0.75, label='y_noisy')\n",
     "axes[0].plot(x, y_true, linewidth=1, label='y_true', color='#455a64')\n",
     "axes[0].set_title('Epoch 0')\n",
     "line_pred = axes[0].plot(x, model(xx).detach().numpy(), label='y_pred', color='#ffa000')[0]\n",
@@ -470,6 +457,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO\n",
+    "\n",
+    "* overfitting/underfitting https://medium.com/greyatom/what-is-underfitting-and-overfitting-in-machine-learning-and-how-to-deal-with-it-6803a989c76"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -511,7 +507,7 @@
     "    \n",
     "    # update plots if needed\n",
     "    losses[t] = loss.item()\n",
-    "    if update_every(t, 2):\n",
+    "    if update_every(t, 5):\n",
     "        set_plot_data(y_pred.detach().numpy(), losses[:t+1])\n",
     "\n",
     "    optimizer.zero_grad() # zero out any previous gradients\n",
@@ -561,15 +557,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model[0].reset_parameters()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "n_mesh = 50\n",
     "\n",
     "xv, yv = torch.meshgrid(torch.linspace(a - 2, a + 2, n_mesh), torch.linspace(b - 2, b + 2, n_mesh))\n",
@@ -609,12 +596,12 @@
     "    cmap=mpl.cm.inferno,\n",
     "    norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
     "    antialiased=False)\n",
-    "\n",
     "ax.plot(*params_and_loss.T, zorder=20, color='white')\n",
     "\n",
     "ax.set_xlabel('a')\n",
     "ax.set_ylabel('b')\n",
     "ax.set_zlabel('MSE')\n",
+    "ax.view_init(elev=30, azim=-110)\n",
     "fig.tight_layout()"
    ]
   },
@@ -648,6 +635,8 @@
    "source": [
     "# A Closer Look: Automatic differentiation with ```torch.autograd```\n",
     "\n",
+    "`torch.autograd` is PyTorch’s automatic differentiation engine that powers neural network training.\n",
+    "\n",
     "Adapted from [here](https://pytorch.org/tutorials/beginner/blitz/autograd_tutorial.html#sphx-glr-beginner-blitz-autograd-tutorial-py)."
    ]
   },
@@ -655,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create two tensors `a` and `b` with `requires_grad=True`. This signals to `autograd` that every operation on them should be tracked."
+    "Let’s take a look at how `autograd` collects gradients. We create two tensors `a` and `b` with `requires_grad=True`. This signals to `autograd` that every operation on them should be tracked."
    ]
   },
   {
@@ -674,7 +663,7 @@
    "source": [
     "We create another tensor ```y``` from ```a``` and ```b```:\n",
     "\n",
-    "$ y = 3a^3 - b^2$"
+    "$ y = 2a - b$"
    ]
   },
   {
@@ -683,7 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = 3 * a**3 - b**2\n",
+    "y = 2 * a - b\n",
     "y"
    ]
   },
@@ -693,7 +682,7 @@
    "source": [
     "Let's assume ```a``` and ```b``` to be parameters of a neural network, and ```y``` to be the error. In NN training, we want gradients of the error w.r.t the parameters, i.e.\n",
     "\n",
-    "$ \\frac{\\partial y}{\\partial a} = 9a^2 $ and $\\frac{\\partial y}{\\partial b} = -2b $"
+    "$ \\frac{\\partial y}{\\partial a} = 2 $ and $\\frac{\\partial y}{\\partial b} = -1 $"
    ]
   },
   {
@@ -709,22 +698,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grads = torch.tensor([1., 1., 1.])\n",
-    "# y.backward(gradient=grads)\n",
     "y.backward()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We need to explicitly pass a ```gradient``` argument in ```y.backward()``` if ```y``` is a vector. ```gradient``` is a tensor of the same shape as ```y```, and it represents the gradient of ```y``` w.r.t itself, i.e.\n",
-    "\n",
-    "$ \\frac{\\partial y}{\\partial y} = 1 $\n",
-    "\n",
-    "Note: the ```gradient``` argument only has to be specified if ```y``` is a non-scalar (i.e. its data has more than one element), otherwise it can be created implicitly.\n",
-    "\n",
-    "Think of the ```gradient``` argument as a boolean vector specifying for which elements of ```y``` we want the gradients to be calculated."
    ]
   },
   {
@@ -742,38 +716,6 @@
    "source": [
     "a.grad, b.grad"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's check that they are actually correct:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.grad == 9 * a**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.grad == -2 * b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
