--- a/notebooks/2_pytorch_advanced.ipynb
+++ b/notebooks/2_pytorch_advanced.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "In this tutorial, we will train a neural network for audio classification using transfer learning. \n",
     "\n",
-    "Some of the code in this example is based on [this](https://github.com/hasithsura/Environmental-Sound-Classification)."
+    "Parts of this example are inspired by [this](https://github.com/hasithsura/Environmental-Sound-Classification)."
    ]
   },
   {
