[update] small notebook fix

--- a/notebooks/1_pytorch_basic.ipynb
+++ b/notebooks/1_pytorch_basic.ipynb
@@ -23,7 +23,7 @@
     "## What is PyTorch?\n",
     "* open-source machine learning library\n",
     "* developed by Facebook AI Research + community\n",
-    "* used in most state-of-the-art research\n",
+    "* used in [most](http://horace.io/pytorch-vs-tensorflow/) state-of-the-art research\n",
     "* _Python first_: deeply integrated into Python, it should _feel familiar_ to use"
    ]
   },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +115,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = -0.50183952461055\n",
+      "b = 1.8028572256396647\n"
+     ]
+    }
+   ],
    "source": [
     "a, b = np.random.uniform(low=-2.0, high=2.0, size=2)\n",
-    "a, b"
+    "print(f'{a = }\\n{b = }')"
    ]
   },
   {
