--- a/notebooks/1_pytorch_basic.ipynb
+++ b/notebooks/1_pytorch_basic.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "\n",
+    "from helpers.train_utils import plot_loss_landscape_3d, plot_loss_landscape_2d"
    ]
   },
   {
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a = -0.50183952461055\n",
-      "b = 1.8028572256396647\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a, b = np.random.uniform(low=-2.0, high=2.0, size=2)\n",
     "print(f'{a = }\\n{b = }')"
@@ -171,8 +164,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note that the number of samples we generate will influence our results: the more data points we allow the model to learn from, the better our final performance will be.\n",
-    "\n",
     "Let's create our _dependent variable_ $y$ by passing $x$ to our function $f$:"
    ]
   },
@@ -345,13 +336,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Constructing the Training Loop"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "As mentioned before, our model parameters are initialized to random values. \n",
     "\n",
     "Let's have a look at what our model predicts with these intital parameters."
@@ -363,7 +347,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_training_steps = 200"
+    "n_training_steps = 250\n",
+    "loss_fn = torch.nn.MSELoss()"
    ]
   },
   {
@@ -404,39 +389,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's remind ourselves of the <a href=\"#detailed_loop\">Detailed Training Loop Diagram</a> and compare what we have achieved so far:\n",
+    "### Stochastic Gradient Descent (SGD)\n",
     "\n",
-    "* [x] Collect input data (our tensor `xx`) and\n",
-    "* [x] Corresponding label data (our tensor `yy`)\n",
-    "* [x] Define a model architecture\n",
-    "* [x] Initialize model parameters to random values\n",
-    "* [x] Calculate predictions (our tensor `y_pred`) based on current model parameters and input data\n",
-    "* [ ] Define a loss function to determine the performance\n",
-    "* [ ] Update model parameters based on loss using automated process (Stochastic Gradient Descent)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To update our model parameters, we need to define a suitable loss function. \n",
-    "\n",
-    "We want `y_pred` to exactly match `y_true`, so we need a mathematical way of figuring out how _similar_ our prediction is to our target line.\n",
-    "\n",
-    "We can use the _mean squared error (MSE)_ to achieve this. It is defined like this:\n",
-    "\n",
-    "$\\text{MSE} = \\frac{1}{n} \\sum_{i = 1}^{n} (Y_i - \\hat{Y_i})^2$\n",
-    "\n",
-    "For every data sample $i$, we compute the squared difference of the target value $Y_i$ and the predicted value $\\hat{Y_i}$. The squared differences are then added up accross all sample and divided by the number of samples to yield a single scalar value, the MSE."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Stochastic Gradient Descent (SGD)\n",
-    "\n",
-    "Furthermore, we need the automated process that will find values for our model parameters $w$ and $b$, such that the predictions closely resemble our target line. This is what the SGD algorithm does for us.\n",
+    "As we learned in the ML introduction, we need an automated process that will find values for our model parameters $a$ and $b$, such that the predictions closely resemble our target line. This is what the SGD algorithm does for us.\n",
     "\n",
     "Specifically, these are the steps that are required to make our model learn from its experience:\n",
     "\n",
@@ -453,7 +408,17 @@
     "1. Go back to the step 2, and *repeat* the process.\n",
     "1. Iterate until you decide to *stop* the training process (for instance, because the model is good enough or you don't want to wait any longer).\n",
     "\n",
-    "Essentially, we want SGD to find the (_a_) minimum of our loss function."
+    "Essentially, we want SGD to find the (or _a_) minimum of our loss function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_loss_landscape_3d(a, b, model, loss_fn, xx, yy);\n",
+    "# plot_loss_landscape_2d(a, b, model, loss_fn, xx, yy);"
    ]
   },
   {
@@ -469,9 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO\n",
-    "\n",
-    "* overfitting/underfitting https://medium.com/greyatom/what-is-underfitting-and-overfitting-in-machine-learning-and-how-to-deal-with-it-6803a989c76"
+    "## Constructing the Training Loop"
    ]
   },
   {
@@ -480,8 +443,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 0.0175\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
+    "learning_rate = 1e-2\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)"
    ]
   },
   {
@@ -490,7 +453,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_fn = torch.nn.MSELoss()\n",
     "losses = np.ones(n_training_steps) * np.infty\n",
     "\n",
     "params_and_loss = torch.zeros((n_training_steps, 3))\n",
@@ -512,11 +474,12 @@
     "    loss = loss_fn(y_pred, yy) # calculate loss\n",
     "\n",
     "    # record current parameter values and loss\n",
-    "    params_and_loss[t] = torch.tensor([*[p.detach() for p in model.parameters()], loss.detach()])\n",
+    "    with torch.no_grad():\n",
+    "        params_and_loss[t] = torch.tensor([*[p for p in model.parameters()], loss])\n",
     "    \n",
     "    # update plots if needed\n",
     "    losses[t] = loss.item()\n",
-    "    if update_every(t, 5):\n",
+    "    if update_every(t, 2):\n",
     "        set_plot_data(y_pred.detach().numpy(), losses[:t+1])\n",
     "\n",
     "    optimizer.zero_grad() # zero out any previous gradients\n",
@@ -532,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we have a look at the model parameters again, we can verfiy that they now closely resemble our _target_ parameters:"
+    "If we have a look at the model parameters again, we can verify that they now closely resemble our _target_ parameters:"
    ]
   },
   {
@@ -541,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[param.item() for param in model.parameters()]"
+    "[(name, tensor.item()) for (name, tensor) in model.named_parameters()]"
    ]
   },
   {
@@ -557,7 +520,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting the Weight Landscape"
+    "Note that the number of samples we generate will influence our results: the more data points we allow the model to learn from, the better our final performance will be."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameter Trajectory Through Loss Landscape\n",
+    "\n",
+    "We can now have a look at how our parameter values were optimized during training to reach the minimum of the loss landscape."
    ]
   },
   {
@@ -566,76 +538,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_mesh = 50\n",
-    "\n",
-    "xv, yv = torch.meshgrid(torch.linspace(a - 2, a + 2, n_mesh), torch.linspace(b - 2, b + 2, n_mesh))\n",
-    "zv = torch.zeros_like(xv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with torch.no_grad():\n",
-    "    for i, (x, y) in enumerate(zip(xv.flatten(), yv.flatten())):\n",
-    "        pa, pb = model.parameters()\n",
-    "        pa.copy_(x.reshape(pa.shape))\n",
-    "        pb.copy_(y.reshape(pb.shape))\n",
-    "        loss = loss_fn(model(xx), yy)\n",
-    "        zv.flatten()[i] = loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "min_loss = zv.min().item()\n",
-    "max_loss = zv.max().item()\n",
-    "ax.plot_surface(\n",
-    "    xv.numpy(), yv.numpy(), zv.numpy(),\n",
-    "    cmap=mpl.cm.inferno,\n",
-    "    norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
-    "    antialiased=False)\n",
-    "ax.plot(*params_and_loss.T, zorder=20, color='white')\n",
-    "\n",
-    "ax.set_xlabel('a')\n",
-    "ax.set_ylabel('b')\n",
-    "ax.set_zlabel('MSE')\n",
-    "ax.view_init(elev=30, azim=-110)\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "cs = ax.contourf(\n",
-    "    xv.numpy(), yv.numpy(), zv.numpy(), \n",
-    "    levels=np.logspace(np.log10(min_loss), np.log10(max_loss), n_mesh),\n",
-    "    norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
-    "    cmap=mpl.cm.inferno)\n",
-    "ax.plot(*params_and_loss.T[:2], color='white', label='model params')\n",
-    "ax.scatter(a, b, color='red', label='target')\n",
-    "ax.text(*(params_and_loss[0, :2] + 0.01), 'initial', color='white')\n",
-    "ax.text(*(params_and_loss[-1, :2] - 0.01), 'final', color='white', ha='right')\n",
-    "\n",
-    "ax.set_xlabel('a')\n",
-    "ax.set_ylabel('b')\n",
-    "ax.set_title('Model parameter trajectory during training')\n",
-    "ax.legend();\n",
-    "fig.tight_layout()"
+    "plot_loss_landscape_3d(a, b, model, loss_fn, xx, yy, param_trajectory=params_and_loss);\n",
+    "# plot_loss_landscape_2d(a, b, model, loss_fn, xx, yy, param_trajectory=params_and_loss);"
    ]
   },
   {
